Trying to fix side white spaces

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
     height: 100lvh;
-    width: 100lvw;
+    width: 100%;
     background-color: #242424;
 }
 
